# hands-on-backend-rs

./: .envrc.sample  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml
migrations/2023-03-07-133915_users/: up.sql
migrations/2023-03-07-134629_contests/: up.sql
migrations/2023-03-11-165933_tasks/: up.sql
migrations/2023-03-11-172407_contest_participates/: down.sql  up.sql
spec/: openapi.yaml
src/: main.rs  schema.rs
src/db/: mod.rs
src/db/model/: contest.rs  mod.rs  task.rs  user.rs
src/db/repository/: user.rs
src/server/: mod.rs
src/server/endpoints/: auth.rs  users.rs
src/server/middleware/: auth.rs
src/server/model/: auth.rs  user.rs
src/util/: password.rs
test/db/: contests.csv  tasks.csv  users.csv
