[package]
name = "hands-on-backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2"] }
env_logger = "0.10.0"
futures = "0.3.27"
hex = "0.4.3"
jsonwebtoken = "8.2.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
